web-frontend/src/styles.scss
@use '@angular/material' as mat;
@include mat.core();
@import 'colors.scss';

$app-primary: mat.define-palette(mat.$teal-palette, 500);
$app-accent: mat.define-palette(mat.$pink-palette, 500);

$app-typography: mat.define-typography-config(
  $font-family: 'Calibri, Helvetica, sans-serif, Candara, Segoe',
    //$headline: mat.define-typography-level(54px, 54px, 400),
    //$title: mat.define-typography-level(28px, 28px, 500),
    //$subheading-2: mat.define-typography-level(26px, 26px, 400),
    //$subheading-1: mat.define-typography-level(24px, 24px, 400),
    // Todo: menu letter spacing 0.14px
  $body-1: mat.define-typography-level(16px, 24px, 400),//, $letter-spacing: 0.14px),
  $body-2: mat.define-typography-level(16px, 20px, 400, $letter-spacing: 0.2px),
  $button: mat.define-typography-level(16px, 16px, 500, $letter-spacing: 1.42px),
);

$app-theme: mat.define-light-theme((
  color: (
    primary: $app-primary,
    accent: $app-accent,
  ),
  typography: $app-typography,
));

@include mat.core-theme($app-theme);
@include mat.button-theme($app-theme);
@include mat.all-component-themes($app-theme);

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

.cdk-overlay-pane.absolute{
  position: absolute!important;
  max-height: 100vh;
  #close-button {
    position: absolute;
    right: 15px;
    top: 15px;height: 32px;
    width: 32px;
    padding: 4px;
  }
  .mat-mdc-dialog-content {
    max-height: 80vh;
  }
}

.view-switch {
  display: flex;
  cursor: pointer;
  width: 30px;
  height: 30px;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
}
.view-switch.active {
  background: #595959;
  color: white;
}

table.striped {
  tr:nth-of-type(odd) {
    background-color: rgba(0,0,0,.05);
  }
}

.load-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.2);
  z-index: 100;
  cursor: not-allowed;
}

button.next {
  position: fixed;
  top: 50%;
  right: 25px;
  z-index: 101;
  background-color: #fafafa;
}

.load-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.2);
  z-index: 100;
  cursor: progress;
  //pointer-events: none;

  mat-spinner {
    left: 45%;
    top: 45%;
    background-color: white;
    border: 6px solid white;
    border-radius: 10px;
    box-shadow: 1px 0px 3px 1px #a7a7a7;

    > svg {
      margin: 10px;
    }
  }
}

button.flat {
  box-shadow: none!important;
}
button.micro {
  height: 30px;
  width: 30px;
}

